--- a/src/main/webapp/WEB-INF/views/calc.html
+++ b/src/main/webapp/WEB-INF/views/calc.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Calc</title>
+    <title>Calc result</title>
 </head>
 <body>
 <h2><p th:text="${calcResult}"/></h2>
